--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "lucide-react": "^0.525.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
